--- a/templates/example.html
+++ b/templates/example.html
@@ -8,10 +8,14 @@
 <body>
     <header>
         WEB-программирование, часть 2. Лабораторная работа {{ nomerLab }}
+        <p><a href="/menu">Меню</a></p>
     </header>
 
     <main>
-
+        5 + 2 = {{ 5 + 2 }}<br>
+        11 * 28 = {{ 11 * 28 }}<br>
+        8452 / 793 = {{ 8452 / 793 }}<br>
+        45 ** 8 = {{ 45 ** 8 }}<br>
     </main>
 
     <footer>
