--- a/templates/example.html
+++ b/templates/example.html
@@ -17,11 +17,28 @@
         11 * 28 = {{ 11 * 28 }}<br>
         8452 / 793 = {{ 8452 / 793 }}<br>
         45 ** 8 = {{ 45 ** 8 }}<br>
-        <ul>
-            {% for f in fruits %}
-            <li>{{ f.name }}: {{ f.price }} &#x20bd;</li>
-            {% endfor %} 
-        </ul>
+        <p>
+            Фрукты: 
+        </p>
+        <p>
+            <ul>
+                {% for f in fruits %}
+                <li>{{ f.name }}: {{ f.price }} &#x20bd;</li>
+                {% endfor %} 
+            </ul>
+        </p>
+        <p>
+            Книги:
+        </p>
+        <p>
+            <ul>
+                {% for B in books %}
+                <li>Автор - {{ B.autor }}: {{ B.name }}, Жанры: {{ B.Genre }}. {{ B.page }} страниц. Цена {{ B.price }} &#x20bd;</li>
+                {% endfor %} 
+            </ul>
+        </p>
+        
+
     </main>
 
     <footer>
