--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block lab %}Лабораторная работа 2{% endblock %}
+{% block lab %}Лабораторная работа 2
+
+{% endblock %}
 
 {% block main %}
     <h1>Шаблоны</h1>
@@ -8,6 +10,10 @@
     <ol>
         <li>
             <a href="/lab2/example">example</a>
+        </li>
+
+        <li>
+            <a href="/lab2/info">lab2INFO</a>
         </li>
     </ol>
 {% endblock %}
