--- a/templates/example.html
+++ b/templates/example.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         WEB-программирование, часть 2. {% if nomerLab %}Лабораторная работа 2{% endif %}
-
+        <p><a href="/menu">Меню</a></p>
+        <p><a href="/lab2/">Назад</a></p>
     </header>
 
     <main>
