--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block lab %}Лабораторная работа 2
-
+<p>
+    <a href="/menu">Меню</a>
+</p>
 {% endblock %}
 
 {% block main %}
