--- a/templates/lab2INFO.html
+++ b/templates/lab2INFO.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block lab %}Лабораторная работа 2
-
+<p><a href="/menu">Меню</a></p>
+<p><a href="/lab2/">Назад</a></p>
 {% endblock %}
 
 {% block main %}
