--- a/templates/form1.html
+++ b/templates/form1.html
@@ -4,6 +4,12 @@
 <p>
     <a href="/lab3/">Назад</a>
 </p>
+<style>
+    .error{
+        color: blue;
+        background-color: red
+    }
+</style>
 {% endblock %}
 
 {% block main %}
@@ -25,19 +31,22 @@
     <form>
         <label>Ваше имя:</label>
         <div>
-            <input type="text" placeholder="Как вас зовут" name="user">
+            <input type="text" placeholder="Как вас зовут" name="user" value="{{ user or '' }}">
+            <span class="error">{{ errors.user }}</span> 
         </div>
         
         <label>Ваш возраст:</label>
         <div>
-            <input type="number" name="age">
+            <input type="number" name="age" value="{{ age or '' }}">
+            <span class="error">{{ errors2.age }}</span> 
+
         </div>
 
         <label>Ваш пол:</label>
         <div>
             <select name="sex">
-                <option value="male">Мужчина</option>
-                <option value="female">Женщина</option>
+                <option value="male"{{ sex == 'male' and 'selected' }}>Мужчина</option>
+                <option value="female"{{ sex == 'female' and 'selected' }}>Женщина</option>
             </select>
         </div>
         
