--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -13,5 +13,11 @@
         <li>
             <a href="/lab3/form1">Форма</a>
         </li>
+        <li>
+            <a href="/lab3/order">Напитки</a>
+        </li>
+        <li>
+            <a href="/lab3/form1">Форма</a>
+        </li>
     </ol>
 {% endblock %}
