--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -17,7 +17,7 @@
             <a href="/lab3/order">Напитки</a>
         </li>
         <li>
-            <a href="/lab3/form1">Форма</a>
+            <a href="/lab3/bilet">Билет</a>
         </li>
     </ol>
 {% endblock %}
