--- a/templates/form1.html
+++ b/templates/form1.html
@@ -38,7 +38,7 @@
         <label>Ваш возраст:</label>
         <div>
             <input type="number" name="age" value="{{ age or '' }}">
-            <span class="error">{{ errors2.age }}</span> 
+            <span class="error">{{ errors.age }}</span> 
 
         </div>
 
