--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -11,7 +11,7 @@
     <div>Тема лабораторной - Формы (POST). Список сделанных страниц</div>
     <ol>
         <li>
-            <a href="">Пусто</a>
+            <a href="/lab4/login">Пусто</a>
         </li>
         <li>
             <a href="">Пусто</a>
