--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -11,10 +11,10 @@
     <div>Тема лабораторной - Формы (POST). Список сделанных страниц</div>
     <ol>
         <li>
-            <a href="/lab4/login">Пусто</a>
+            <a href="/lab4/login">Авторизация</a>
         </li>
         <li>
-            <a href="">Пусто</a>
+            <a href="/lab4/fridge">Холодильник</a>
         </li>
         <li>
             <a href="">Пусто</a>
