--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -17,7 +17,7 @@
             <a href="/lab4/fridge">Холодильник</a>
         </li>
         <li>
-            <a href="">Пусто</a>
+            <a href="/lab4/zerno">Заказ зерна</a>
         </li>
     </ol>
 {% endblock %}
