Куки - цвет текста

--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -19,5 +19,8 @@
         <li>
             <a href="/lab4/zerno">Заказ зерна</a>
         </li>
+        <li>
+            <a href="/lab4/cookies">Изменения Куки</a>
+        </li>
     </ol>
 {% endblock %}
