--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -14,6 +14,14 @@
             <input type="color" id="color" name="color">
         </div>
         <div>
+            <label for="bgcolor">Выберите цвет фона:</label>
+            <input type="color" id="bgcolor" name="bgcolor">
+        </div>
+        <div>
+            <label for="fontsize">Выберите размер шрифта:</label>
+            <input type="number" id="fontsize" name="fontsize" min="5" max="30">
+        </div>
+        <div>
             <button type="submit">OK</button>
         </div>
     </form>
