--- a/templates/articleN.html
+++ b/templates/articleN.html
@@ -5,7 +5,7 @@
     <label style="font-size: 24px;">
         База Знаний
     </label>
-    <a href="/lab5/view_notes" style="border: 0px solid; margin-left: 50px; text-decoration: none; color: black;">Просмотреть заметки</a>
+    <a href="/lab5/user/articles" style="border: 0px solid; margin-left: 50px; text-decoration: none; color: black;">Просмотреть заметки</a>
     <a href="/lab5/new_article" style="border: 0px solid; margin-left: 10px; text-decoration: none; color: black;">Создать заметку</a>
     <a href="/lab5/login" style="border: 1px solid; border-radius: 8px; padding: 5px; margin-left: 50px; text-decoration: none; color: black;">Войти</a></li>
     <a href="/lab5/register" style="border: 1px solid; border-radius: 8px; padding: 5px; color: white; background-color: blue; text-decoration: none;">Зарегистрироваться</a>
@@ -22,7 +22,7 @@
 
 {% block main %}
     <div style="margin-left: 200px; margin-right: 200px;">
-        <h1>{{ article_title}}</h1>
+        <h1>{{ article_title }}</h1>
         {% for paragraph in article_text %}
         <p>
             {{ paragraph }}
