--- a/templates/user_articles.html
+++ b/templates/user_articles.html
@@ -14,20 +14,19 @@
 <p>
     <a href="/menu">Меню</a>
 </p>
-
+<p>
+    <a href="/lab5/">Назад</a>
+</p>
 
 {% endblock %}
 
 {% block main %}
-
-<body>
-    <h1>БД</h1>
-    <div>Тема лабораторной - База Данных</div>
-    <ol>
-        <li>
-            <a href="/lab5/users">Пользователи</a>
-        </li>
-    </ol>
-</body>
-
+    <h1>Добро пожаловать, {{ username }}!</h1>
+        
+    <h2>Ваши заметки:</h2>
+    <ul>
+        {% for title in article_title %}
+            <li style="border: 1px solid; padding: 5px; width: 500px; margin-top: 15px; border-radius: 8px; text-align: center;">{{ title[0] }}</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
