--- a/templates/articleN.html
+++ b/templates/articleN.html
@@ -10,6 +10,7 @@
     <a href="/lab5/login" style="border: 1px solid; border-radius: 8px; padding: 5px; margin-left: 50px; text-decoration: none; color: black;">Войти</a></li>
     <a href="/lab5/register" style="border: 1px solid; border-radius: 8px; padding: 5px; color: white; background-color: blue; text-decoration: none;">Зарегистрироваться</a>
     <label>{{ username }}</label>
+    <a href="/lab5/logout"><img src="/static/exit.png" width="30px" height="15px"></a>
 </div>
 <p>
     <a href="/menu">Меню</a>
