--- a/templates/user_articles.html
+++ b/templates/user_articles.html
@@ -27,7 +27,14 @@
     <h2>Ваши заметки:</h2>
     <ul>
         {% for title in article_title %}
-            <li style="border: 1px solid; padding: 5px; width: 500px; margin-top: 15px; border-radius: 8px; text-align: center;">{{ title[0] }}</li>
+            <li style="border: 1px solid; padding: 5px; width: 500px; margin-top: 15px; border-radius: 8px; text-align: center;"><a href="/lab5/new_article/{{ title[1] }}">{{ title[0] }} ID: {{ title[1] }}</a></li>
         {% endfor %}
     </ul>
+    <h2>Избранное:</h2>
+    <ul>
+        {% for title in article_title %}
+            <li style="border: 1px solid; padding: 5px; width: 500px; margin-top: 15px; border-radius: 8px; text-align: center;">{{ title[0] }}</li>
+        {% endfor %}
+    </ul> 
+
 {% endblock %}
