Просмотр статей других пользователей

--- a/templates/lab5.html
+++ b/templates/lab5.html
@@ -28,7 +28,12 @@
         <li>
             <a href="/lab5/users">Пользователи</a>
         </li>
+        <li>
+            <a href="/lab5/publish_article">Просмотр созданных статей</a>
+        </li>
     </ol>
+ 
+
 </body>
 
 {% endblock %}
